# Operating_systems

./: README.md
OS_1/: CMakeLists.txt  Creator.cpp  Employee.h  Main.cpp  README.md  Reporter.cpp
OS_1/include/: Employee.h
OS_1/src/: Creator.cpp  Main.cpp  Reporter.cpp
OS_1/tests/: tests.cpp
OS_2/: CMakeLists.txt  OS_2.sln  README.md
OS_2/OS_2/: OS_2.cpp  OS_2.vcxproj
OS_2/src/: main.cpp
OS_2/tests/: tests.cpp
OS_3/: CMakeLists.txt  OS_3.cpp  OS_3.sln  README.md
OS_3/OS_3/: OS_3.cpp  OS_3.vcxproj
OS_4/: Makefile  README.md  receiver.cpp
OS_4/src/: sender.cpp
OS_5/: Makefile  README.md
OS_5/src/: client.cpp  server.cpp
